# Typhon

./: CMakeLists.txt  README.md
analyzer/: SemanticAnalyzer.h  Type.cpp  Type.h  Visitor.h
lexer/: Token.h
parser/: ASTNode.cpp  ASTNode.h  Visibility.h
src/: CMakeLists.txt  main.cpp
src/analyzer/: SemanticAnalyzer.cpp  SemanticAnalyzer.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h
src/common/: Common.h  Visitor.h  variant_utils.cpp  variant_utils.h
src/emitter/: PythonEmitter.cpp
src/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/parser/: ASTNode.h  Parser.cpp  Parser.h
src/types/: Type.cpp  Type.h
tests/: CMakeLists.txt  lexer_tests.cpp  test_main.cpp
tests/emitter/: py_emitter_tests.cpp
tests/parsing/: parsing_tests.cpp  utils.cpp  utils.h
tests/samples/: hello_world.ty
tests/sema/: sema_tests.cpp
